--- a/site/training/what-is-validmind/what-is-validmind.qmd
+++ b/site/training/what-is-validmind/what-is-validmind.qmd
@@ -366,25 +366,23 @@ Track all activities for:
 
 ::: {.column width="70%" .nt3 .f3 .pl4}
 
-[Workflows let you:]{.f2 .b}
+[What can I use workflows for?]{.f2 .b}
 
 ::: {.pl2}
-- [Implement]{.b} governance frameworks
+- [Implement]{.b} governance for regulations and internal policies
+
+- [Demonstrate]{.b} compliance to auditors
 
 - [Automate]{.b} risk processes with triggers and schedules
 
 - [Standardize]{.b} model documentation and independent review
 
 - [Get alerts]{.b} for items that need attention
-
-- [Comply]{.b} with external regulations and internal policies
-
+:::
 :::
 
 ::: {.column width="30%" .pl4 .pr3 .nt5}
 ![](../assets/vm-settings-workflows.png){fig-alt="A screenshot of ready-made workflows" .screenshot .tilt-left}
-:::
-
 :::
 
 ::::
@@ -436,29 +434,21 @@ ValidMind provides [customizable dashboards]{.b} and [analytics]{.b} for oversig
 
 # [Analytics]{.hidden}{data-autoslide="14000"}
 
-::: {.tr .nt4}
-[Management Responsibilities]{.button-small .f3}
-:::
-
 :::: {.columns}
 
-::: {.column width="70%" .nl3}
-![](../assets/vm-analytics.gif){fig-alt="An animation of analytics being scrolled through on the ValidMind platform. The scrolling starts on the Models tab and then switches to the Artifacts tab, followed by a look at a sample artifact before returning to the original tab" .screenshot}
+::: {.column width="70%" .tc .nt5}
+![](../assets/vm-analytics.gif){fig-alt="An animation of analytics being scrolled through on the ValidMind platform. The scrolling starts on the Models tab and then switches to the Artifacts tab, followed by a look at a sample artifact before returning to the original tab" .screenshot .tilt-right}
 :::
 
-::: {.column width="30%" .f3}
+::: {.column width="30%" .f3 .pl3}
 
-::: {.pl4 .mb4 .mt4 .pt2}
-- Enable management with responsibility for the governance framework
-- Create reports & analytics
-- Perform attestation by owners
-:::
+[Enable leadership]{.b} to take responsibility for the governance framework 
 
-[Internal Audit]{.button-small .f4}
+Create clear, actionable analytics
 
-::: {.pl4 .mt4}
-Track artifacts, approvals, and sign-offs across the lifecycle
-:::
+Track artifacts, approvals, and sign offs across the lifecycle
+
+Instantly assess your risk posture 
 
 :::
 
