--- a/site/training/what-is-validmind/what-is-validmind.qmd
+++ b/site/training/what-is-validmind/what-is-validmind.qmd
@@ -24,7 +24,6 @@ format:
   html:
     output-file: _what-is-validmind.html
     search: false
-
 title-slide-attributes:
   data-background-image: "../assets/digitalspace-colours.svg"
   data-background-opacity: "0.8"
@@ -368,16 +367,16 @@ Track all activities for:
 
 [What can I use workflows for?]{.f2 .b}
 
-::: {.pl2}
-- [Implement]{.b} governance for regulations and internal policies
+::: {.pl2 .pt2}
+{{< fa check >}} [Implement]{.b} governance for regulations and  policies.
 
-- [Demonstrate]{.b} compliance to auditors
+{{< fa check >}} [Demonstrate]{.b} compliance to auditors.
 
-- [Automate]{.b} risk processes with triggers and schedules
+{{< fa check >}} [Automate]{.b} risk processes with triggers and schedules.
 
-- [Standardize]{.b} model documentation and independent review
+{{< fa check >}} [Standardize]{.b} documentation and validation.
 
-- [Get alerts]{.b} for items that need attention
+{{< fa check >}} [Get alerts]{.b} for items that need attention.
 :::
 :::
 
@@ -432,23 +431,24 @@ ValidMind provides [customizable dashboards]{.b} and [analytics]{.b} for oversig
 ::::
 
 
-# [Analytics]{.hidden}{data-autoslide="14000"}
+# [Reporting and Analytics]{.hidden}{data-autoslide="14000"}
 
 :::: {.columns}
 
-::: {.column width="70%" .tc .nt5}
+::: {.column width="60%" .tc .nt4}
 ![](../assets/vm-analytics.gif){fig-alt="An animation of analytics being scrolled through on the ValidMind platform. The scrolling starts on the Models tab and then switches to the Artifacts tab, followed by a look at a sample artifact before returning to the original tab" .screenshot .tilt-right}
 :::
 
-::: {.column width="30%" .f3 .pl3}
+::: {.column width="40%" .f3 .pl3 .nt4}
 
-[Enable leadership]{.b} to take responsibility for the governance framework 
+[Enable stakeholders]{.b} to take responsibility for governance:
 
-Create clear, actionable analytics
+::: {.pl2 .pt2}
+- [Track validation issues]{.b}, approvals, and sign-offs across the model lifecycle.
+- Get [clear analytics]{.b} and [real-time insights]{.b} to assess your risk posture. 
+:::
 
-Track artifacts, approvals, and sign offs across the lifecycle
-
-Instantly assess your risk posture 
+Or, [export reports]{.b} to share with stakeholders.
 
 :::
 
@@ -463,7 +463,7 @@ Instantly assess your risk posture
 :::
 
 ::: {.column width="50%" .tc .nt4}
-[[{{< fa file-export >}}&ensp;How do I export data?]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/guide/reporting/generating-exports.html)
+[[{{< fa circle-info >}}&ensp;How do I export?]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/guide/reporting/generating-exports.html)
 :::
 
 ::::
@@ -492,48 +492,47 @@ Instantly assess your risk posture
 
 <!-- <hr> -->
 
-ValidMind sets a standard by [automating documentation]{.b}, providing [comprehensive testing]{.b}, and enabling [independent validation]{.b} with full audit trails.
+ValidMind automates [documentation]{.b}, provides comprehensive [testing]{.b} with our open-source library, and enables independent [validation]{.b} with full audit trails.
 
 :::
 
 ::::
 
-
-# [Automate documentation]{.hidden}{data-autoslide="21000"}
-
-::: {.tr .pb2 .nt6 .pr5}
-[Automate Documentation]{.button-small .f4}
-:::
+# [Documentation]{.hidden}{data-autoslide="21000"}
 
 :::: {.columns}
 
-::: {.column width="70%" .nl3 .nt5 .br}
+::: {.column width="60%" .nt6}
 
-![](../assets/vm-model-documentation.gif){fig-alt="An animation of model documentation being scrolled through on the ValidMind platform. The scrolling starts at the documentation overview and then expands the development documentation section" .screenshot}
+![](../assets/vm-model-documentation.gif){width="90%" fig-alt="An animation of model documentation being scrolled through on the ValidMind platform. The scrolling starts at the documentation overview and then expands the development documentation section" .screenshot .tilt-right}
 
 :::
 
-::: {.column width="30%" .pt3 .pl4 .f3 .mb6}
-- Regulatory alignment for many standard industry use cases<br>
-- Predefined templates ensure consistency
+::: {.column width="40%" .pt4 .pl4 .f3 .pb6}
+
+::: {.pb2 .nt6}
+[Documentation]{.f2 .b}
+:::
+
+- For AI systems, models, use cases, tools, and more
+- Use predefined templates or create your own
 - Rich-text online editor
-- Content block library
-- Highly customizable
+- Reusable content block library
 :::
 
 ::::
 
-::: {.slideover--b .auto-collapse}
+::: {.slideover--b .auto-collapse-10}
 
 :::: columns
 
 ::: {.column width="70%" .nt4}
 [Templates define the structure of your documents:]{.f3 .b}<br>
 
-- Start with a predefined template for one of the use cases to save time
-- Run notebooks with code samples to populate templates
-- Add your own tests, add new sections, or create custom templates
-- Save time with reusable content blocks in the online editor
+1. Start with a predefined template for one of the use cases to save time
+2. Run notebooks with code samples to populate templates
+3. Add your own tests, add new sections, or create custom templates
+4. Save time with reusable content blocks in the online editor
 
 [model&nbsp;documentation]{.button-small .shadow-5-ns .f5} [validation&nbsp;reports]{.button-small .shadow-5-ns .f5} [ongoing&nbsp;monitoring]{.button-small .shadow-5-ns .f5} [custom&nbsp;document&nbsp;types]{.button-small .shadow-5-ns .f5} 
 :::
@@ -553,9 +552,9 @@ ValidMind sets a standard by [automating documentation]{.b}, providing [comprehe
 [capital&nbsp;markets]{.button-small .f4 .pl3 .shadow-5-ns}
 [credit&nbsp;scorecard]{.button-small .f4 .pl3 .shadow-5-ns}
 
-::: {.tc .nt4}
+<!-- ::: {.tc .nt4}
 [EXAMPLES OF AVAILABLE TEMPLATES]{.smallcaps .f6}
-:::
+::: -->
 
 :::
 
@@ -565,35 +564,23 @@ ValidMind sets a standard by [automating documentation]{.b}, providing [comprehe
 :::
 
 
-# [Comprehensive testing]{.hidden}{data-autoslide="32000"}
+# [Testing]{.hidden}{data-autoslide="32000"}
 
 :::: {.columns}
 
-::: {.column width="65%" .nt4}
-![](../assets/vm-test-sandbox.gif){fig-alt="An animation of the model testing process as you see various test results and documentation being created" .screenshot}
+::: {.column width="40%" .nt5 .f3 .pr4}
+[Testing]{.f2 .b}
 
-:::
+[[{{< fa brands github >}} open source software]{.smallcaps .b .black}](https://github.com/validmind/validmind-library)
 
-::: {.column width="35%" .pl4 .pb3 .nt2 .f3}
-[Comprehensive Testing]{.button-small .f4}
-
-- Open-source library
 - 200 out-of-box tests
 - End-to-end test suites
 - Model, prompt, and data assessments
 - Extensible with custom tests and test providers
+:::
 
-<!-- ::: {.pt2 .pl3 .mt2 .f3}
-```python
-pip install validmind
-import validmind as vm
-
-...
-
-results = vm.run_development_tests()
-```
-::: -->
-
+::: {.column width="60%" .nt5}
+![](../assets/vm-test-sandbox.gif){fig-alt="An animation of the model testing process as you see various test results and documentation being created" .screenshot .tilt-left}
 :::
 
 :::: 
@@ -619,25 +606,25 @@ results = vm.run_development_tests()
 :::
 
 
-# [Independent review]{.hidden}{data-autoslide="24000"}
+# [Validation]{.hidden}{data-autoslide="24000"}
 
 :::: {.columns}
 
 ::: {.column width="70%" .mt2}
-![](../assets/vm-assess-compliance.gif){fig-alt="An animation of a validation report being scrolled through on the ValidMind platform to assess compliance. The reviewer then changes the assessment from No Adherence to Some Adherence in the dropdown menu" .screenshot}
+![](../assets/vm-assess-compliance.gif){fig-alt="An animation of a validation report being scrolled through on the ValidMind platform to assess compliance. The reviewer then changes the assessment from No Adherence to Some Adherence in the dropdown menu" .screenshot .tilt-right}
 :::
 
 ::: {.column width="30%" .pl4 .f3}
-[Independent Review ]{.button-small .f4}
+[Validation]{.f2 .b}
 
-- Tailor the process to regulatory and internal standards
+- Tailor the process to regulatory or internal standards
 - Assess compliance by linking evidence from developers and validators
-- Generate risk assessments with clear recommendations
+- Generate risk assessments with recommendations
 :::
 
 ::::
 
-::: {.slideover--b .three-quarters .auto-collapse}
+::: {.slideover--b .auto-collapse}
 
 :::: columns
 
@@ -654,22 +641,22 @@ results = vm.run_development_tests()
 :::
 
 
-# [Process verification]{.hidden}{data-autoslide="12000"}
+# [Robust processes]{.hidden}{data-autoslide="12000"}
 
 :::: {.columns}
 
-::: {.column width="70%" .nl3 .nt5}
-![](../assets/vm-finding.png){fig-alt="A screenshot of an artifact with details about severity, remediation status and documentation reference" .screenshot}
+::: {.column width="50%" .pl4 .f3 .nt5} 
+
+[Robust processes]{.f2 .b}
+
+- Create challenger models
+- Open validation issues
+- Track remediation plans and monitor resolution
+- Collaborate with developers to resolve issues
 :::
 
-::: {.column width="30%" .pl4 .f3 .nt4} 
-
-[Process Verification]{.button-small .f4}
-
-- Create artifacts with severity, risk area, and references
-- Track remediation plans and monitor resolution
-- Ensure thorough checks and collaboration with developers
-- Create challenger models
+::: {.column width="50%" .nl3 .nt5}
+![](../assets/vm-finding.png){fig-alt="A screenshot of an artifact with details about severity, remediation status and documentation reference" .screenshot .tilt-left}
 :::
 
 ::::
@@ -680,14 +667,15 @@ results = vm.run_development_tests()
 
 ::: {.column width="50%" .nt4}
 [Did you know?]{.f3 .b}<br>
-Validators can use the same library as model developers: 
+Validators can use the same library as developers: 
 
 - Run your own tests to create challenger models
 - Link the results as validator evidence to your report
 :::
 
 ::: {.column width="50%" .tc .pl4 .nt4}
-[[{{< fa circle-info >}}&ensp;Validator Fundamentals Training]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/training/validator-fundamentals/validator-fundamentals-register.html)<br>[CHALLENGER MODELS ARE COVERED IN MODULE 3]{.smallcaps .f5}
+[[{{< fa circle-info >}}&ensp;Validator Fundamentals Training]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/training/validator-fundamentals/validator-fundamentals-register.html)
+<!-- <br>[TIP: CHALLENGER MODELS ARE COVERED IN MODULE 3]{.smallcaps .f5} -->
 :::
 
 ::::
