--- a/site/training/what-is-validmind/what-is-validmind.qmd
+++ b/site/training/what-is-validmind/what-is-validmind.qmd
@@ -34,7 +34,7 @@ skip_preview: true
 
 :::: {.columns}
 
-::: {.column width="50%" .tl .nt5 .pl5}
+::: {.column width="50%" .tr .nt5 .pr5}
 
 ::: {.button .button-light-green .shadow-5-ns}
 ::: {.tl .nl4 .nt3}
@@ -82,7 +82,7 @@ skip_preview: true
 :::
 :::
 
-::: {.column width="50%" .tl}
+::: {.column width="50%" .tr}
 
 ::: {.button .button-light-green .shadow-5-ns}
 ::: {.tl .nl4 .nt2}
@@ -102,7 +102,7 @@ skip_preview: true
 
 :::: {.columns}
 
-::: {.column width="50%" .tl .pl5}
+::: {.column width="50%" .tr .pr5}
 
 ::: {.button .button-light-green .shadow-5-ns}
 ::: {.tl .nl4 .nt3}
@@ -368,15 +368,15 @@ Track all activities for:
 [What can I use workflows for?]{.f2 .b}
 
 ::: {.pl2 .pt2}
-{{< fa check >}} [Implement]{.b} governance for regulations and  policies.
+{{< fa check >}}&ensp;[Implement]{.b} governance for regulations and  policies.
 
-{{< fa check >}} [Demonstrate]{.b} compliance to auditors.
+{{< fa check >}}&ensp;[Demonstrate]{.b} compliance to auditors.
 
-{{< fa check >}} [Automate]{.b} risk processes with triggers and schedules.
+{{< fa check >}}&ensp;[Automate]{.b} risk processes with triggers and schedules.
 
-{{< fa check >}} [Standardize]{.b} documentation and validation.
+{{< fa check >}}&ensp;[Standardize]{.b} documentation and validation.
 
-{{< fa check >}} [Get alerts]{.b} for items that need attention.
+{{< fa check >}}&ensp;[Get alerts]{.b} for items that need attention.
 :::
 :::
 
@@ -443,7 +443,7 @@ ValidMind provides [customizable dashboards]{.b} and [analytics]{.b} for oversig
 
 [Enable stakeholders]{.b} to take responsibility for governance:
 
-::: {.pl2 .pt2}
+::: {.pl2 .pt2 .f4}
 - [Track validation issues]{.b}, approvals, and sign-offs across the model lifecycle.
 - Get [clear analytics]{.b} and [real-time insights]{.b} to assess your risk posture. 
 :::
@@ -715,19 +715,22 @@ Combine monitoring and workflows for [performance-based governance]{.b} with [th
 
 :::: {.columns}
 
-::: {.column width="70%" .pt4}
-![](../assets/vm-ongoing-monitoring.gif){fig-alt="An animation of ongoing model monitoring being scrolled through on the ValidMind platform showing performance metrics and potential issues" .screenshot}
-:::
-
-::: {.column width="30%" .mt3 .pl4 .f3}
-[Ongoing Monitoring]{.button-small .f4}
+::: {.column width="50%" .f3 .pt4 .pt6}
+[Ongoing Monitoring]{.f2 .b}
 
 - Enable for any model in the inventory
-- Track model performance over time
-- Detect data drift and other issues early
-- Define thresholds and receive alerts
 
-![Identify potential issues early](../assets/target-prediction-distribution-plot-zoomed.png){fig-alt="A screenshot of a graph that shows potential data drift over time" .screenshot}
+- Track model performance over time
+
+- Detect data drift and other issues early
+
+- Define thresholds and receive alerts
+:::
+
+::: {.column width="50%" .pl4 .tr .f3}
+![Ongoing monitoring documentation](../assets/vm-ongoing-monitoring.gif){width="80%" fig-alt="An animation of ongoing model monitoring being scrolled through on the ValidMind platform showing performance metrics and potential issues" .screenshot}
+
+![Identify potential issues early](../assets/target-prediction-distribution-plot-zoomed.png){width="80%" fig-alt="A screenshot of a graph that shows potential data drift over time" .screenshot}
 :::
 
 :::: 
