--- a/site/training/what-is-validmind/what-is-validmind.qmd
+++ b/site/training/what-is-validmind/what-is-validmind.qmd
@@ -38,11 +38,11 @@ skip_preview: true
 
 ::: {.button .button-light-green .shadow-5-ns}
 ::: {.tl .nl4 .nt3}
-[1]{.ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .smallcaps .f3}
+[1]{.ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .bw1 .smallcaps .f3}
 :::
 
 ::: {.nt6}
-![](1-the-inventory.png){height=125px fig-alt="A screenshot of the inventory"}<br>[[the inventory]{.b .black .smallercaps}](#the-inventory)
+![](1-the-inventory.png){height=125px fig-alt="A screenshot of the inventory"}<br>[[The Inventory]{.b .black .f4}](#the-inventory)
 :::
 
 :::
@@ -52,11 +52,11 @@ skip_preview: true
 
 :::{.button .button-light-green .shadow-5-ns}
 ::: {.tl .nl4 .nt3}
-[2]{.ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .smallcaps .f3}
+[2]{.ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .bw1 .smallcaps .f3}
 :::
 
 ::: {.nt6}
-![](2-workflows-and-approvals.png){height=125px fig-alt="A screenshot of the workflows and approvals"}<br>[[workflows + approvals]{.b .black .smallercaps}](#workflows-approvals)
+![](2-workflows-and-approvals.png){height=125px fig-alt="A screenshot of the workflows and approvals"}<br>[[Workflows + Approvals]{.b .black .f4}](#workflows-approvals)
 :::
 
 :::
@@ -72,11 +72,11 @@ skip_preview: true
 
 ::: {.button .button-light-green .shadow-5-ns}
 ::: {.tl .nl4 .nt3}
-[3]{.ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .smallcaps .f3}
+[3]{.ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .bw1 .smallcaps .f3}
 :::
 
 ::: {.nt6}
-![](3-reporting-and-analytics.png){height=125px fig-alt="A screenshot of the reporting and analytics"}<br>[[reporting + analytics]{.b .black .smallercaps}](#reporting-analytics)
+![](3-reporting-and-analytics.png){height=125px fig-alt="A screenshot of the reporting and analytics"}<br>[[Reporting + Analytics]{.b .black .f4}](#reporting-analytics)
 :::
 
 :::
@@ -86,11 +86,11 @@ skip_preview: true
 
 ::: {.button .button-light-green .shadow-5-ns}
 ::: {.tl .nl4 .nt2}
-[4]{.ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .smallcaps .f3}
+[4]{.ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .bw1 .smallcaps .f3}
 :::
 
 ::: {.nt6}
-![](4-documentation-testing-and-validation.png){height=125px fig-alt="A screenshot of the documentation, testing and validation"}<br>[[Documentation + Testing + Validation]{.b .black .smallercaps}](#documentation-testing-validation)
+![](4-documentation-testing-and-validation.png){height=125px fig-alt="A screenshot of the documentation, testing and validation"}<br>[[Documentation + Testing + Validation]{.b .black .f4}](#documentation-testing-validation)
 :::
 
 :::
@@ -106,11 +106,11 @@ skip_preview: true
 
 ::: {.button .button-light-green .shadow-5-ns}
 ::: {.tl .nl4 .nt3}
-[5]{.ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .smallcaps .f3}
+[5]{.ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .bw1 .smallcaps .f3}
 :::
 
 ::: {.nt6}
-![](5-ongoing-monitoring.png){height=125px fig-alt="A screenshot of the ongoing monitoring"}<br>[[ongoing monitoring]{.b .black .smallercaps}](#ongoing-monitoring)
+![](5-ongoing-monitoring.png){height=125px fig-alt="A screenshot of the ongoing monitoring"}<br>[[Ongoing Monitoring]{.b .black .f4}](#ongoing-monitoring)
 :::
 
 :::
@@ -120,11 +120,11 @@ skip_preview: true
 
 ::: {.button .button-light-green .shadow-5-ns}
 ::: {.tl .nl4 .nt3}
-[6]{.ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .smallcaps .f3}
+[6]{.ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .bw1 .smallcaps .f3}
 :::
 
 ::: {.nt6}
-![](6-risk-insights-and-regulatory-alignment.png){height=125px fig-alt="A screenshot of the risk insights and regulatory alignment"}<br>[[risk insights + regulatory alignment]{.b .black .smallercaps}](#risk-insights-regulatory-alignment)
+![](6-risk-insights-and-regulatory-alignment.png){height=125px fig-alt="A screenshot of the risk insights and regulatory alignment"}<br>[[Risk Insights + Regulatory Alignment]{.b .black .f4}](#risk-insights-regulatory-alignment)
 :::
 
 :::
@@ -133,7 +133,7 @@ skip_preview: true
 ::::
 
 
-::: {.slideover--b .half .auto-collapse}
+::: {.slideover--b .half .auto-collapse-1}
 
 ::: {.tc}
 
@@ -166,7 +166,7 @@ skip_preview: true
 :::
 
 ::: {.column width="10%" .f2 .pt2 .tr}
-[1]{.f1 .ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .smallcaps}
+[1]{.f1 .ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .bw1 .smallcaps}
 :::
 
 ::: {.column width="70%" .f2 .pl3 .pr3 .pt2}
@@ -192,16 +192,6 @@ ValidMind is your [system of record]{.b} for governance. Use the inventory to [t
 
 ::: {.column width="40%" .f3 .pl3}
 The inventory is [industry-aligned]{.b}, highly [customizable]{.b} with your own fields, [integrated with workflows]{.b}, and [scales to your needs]{.b}.
-<!-- [The Inventory]{.f2 .b}
-
-- Industry-aligned
-- Customizable
-- Integrated with workflows
-<br>[Example: Risk assessment]{.smallcaps .f6}
-- Link interdependent items
-- Filter, sort, and search
-- Scales to your needs -->
-
 :::
 
 ::::
@@ -283,7 +273,7 @@ For example, you can require users to [identify AI applications]{.b} so that the
 :::
 
 ::: {.column width="10%" .f2 .pt2 .tr}
-[2]{.f1 .ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .smallcaps}
+[2]{.f1 .ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .bw1 .smallcaps}
 :::
 
 ::: {.column width="70%" .f2 .pl3 .pr3 .pt2}
@@ -416,7 +406,7 @@ Track all activities for:
 :::
 
 ::: {.column width="10%" .f2 .pt2 .tr}
-[3]{.f1 .ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .smallcaps}
+[3]{.f1 .ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .bw1 .smallcaps}
 :::
 
 ::: {.column width="70%" .f2 .pl3 .pr3 .pt2}
@@ -441,14 +431,14 @@ ValidMind provides [customizable dashboards]{.b} and [analytics]{.b} for oversig
 
 ::: {.column width="40%" .f3 .pl3 .nt4}
 
-[Enable stakeholders]{.b} to take responsibility for governance:
+[Enable stakeholders]{.b} to take responsibility:
 
 ::: {.pl2 .pt2 .f4}
 - [Track validation issues]{.b}, approvals, and sign-offs across the model lifecycle.
 - Get [clear analytics]{.b} and [real-time insights]{.b} to assess your risk posture. 
 :::
 
-Or, [export reports]{.b} to share with stakeholders.
+[Export documents]{.b} to share with other stakeholders.
 
 :::
 
@@ -484,7 +474,7 @@ Or, [export reports]{.b} to share with stakeholders.
 :::
 
 ::: {.column width="10%" .f2 .pt2 .tr}
-[4]{.f1 .ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .smallcaps}
+[4]{.f1 .ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .bw1 .smallcaps}
 :::
 
 ::: {.column width="70%" .f2 .pl3 .pr3 .pt2}
@@ -514,9 +504,9 @@ ValidMind automates [documentation]{.b}, provides comprehensive [testing]{.b} wi
 [Documentation]{.f2 .b}
 :::
 
-- For AI systems, models, use cases, tools, and more
-- Use predefined templates or create your own
-- Rich-text online editor
+- For [AI systems]{.b}, [models]{.b}, [use cases]{.b}, [tools]{.b}, and more
+- Use predefined [templates]{.b} or create your own
+- Full-featured online editor
 - Reusable content block library
 :::
 
@@ -645,7 +635,7 @@ ValidMind automates [documentation]{.b}, provides comprehensive [testing]{.b} wi
 
 :::: {.columns}
 
-::: {.column width="50%" .pl4 .f3 .nt5} 
+::: {.column width="50%" .pr4 .f3 .nt5} 
 
 [Robust processes]{.f2 .b}
 
@@ -655,7 +645,7 @@ ValidMind automates [documentation]{.b}, provides comprehensive [testing]{.b} wi
 - Collaborate with developers to resolve issues
 :::
 
-::: {.column width="50%" .nl3 .nt5}
+::: {.column width="50%" .nt5}
 ![](../assets/vm-finding.png){fig-alt="A screenshot of an artifact with details about severity, remediation status and documentation reference" .screenshot .tilt-left}
 :::
 
@@ -696,7 +686,7 @@ Validators can use the same library as developers:
 :::
 
 ::: {.column width="10%" .f2 .pt2 .tr}
-[5]{.f1 .ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .smallcaps}
+[5]{.f1 .ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .bw1 .smallcaps}
 :::
 
 ::: {.column width="70%" .f2 .pl3 .pr3 .pt2}
@@ -715,7 +705,7 @@ Combine monitoring and workflows for [performance-based governance]{.b} with [th
 
 :::: {.columns}
 
-::: {.column width="50%" .f3 .pt4 .pt6}
+::: {.column width="50%" .f3 .pt4 .pt5}
 [Ongoing Monitoring]{.f2 .b}
 
 - Enable for any model in the inventory
@@ -727,7 +717,7 @@ Combine monitoring and workflows for [performance-based governance]{.b} with [th
 - Define thresholds and receive alerts
 :::
 
-::: {.column width="50%" .pl4 .tr .f3}
+::: {.column width="50%" .pl4 .tr .f3 .tilt-left}
 ![Ongoing monitoring documentation](../assets/vm-ongoing-monitoring.gif){width="80%" fig-alt="An animation of ongoing model monitoring being scrolled through on the ValidMind platform showing performance metrics and potential issues" .screenshot}
 
 ![Identify potential issues early](../assets/target-prediction-distribution-plot-zoomed.png){width="80%" fig-alt="A screenshot of a graph that shows potential data drift over time" .screenshot}
@@ -739,12 +729,12 @@ Combine monitoring and workflows for [performance-based governance]{.b} with [th
 
 :::: {.columns}
 
-::: {.column width="75%" .nt5 .pl4}
-![](../assets/vm-periodic-review-long.gif){width="90%" fig-alt="A screenshot of workflow showing how periodic reviews are performed." .screenshot}
+::: {.column width="50%" .nt5 .pl4}
+![](../assets/vm-periodic-review-long.gif){width="90%" fig-alt="A screenshot of workflow showing how periodic reviews are performed." .screenshot .tilt-right}
 :::
 
-::: {.column width="25%" .f4}
-[Outcomes Analysis]{.button-small .f5}
+::: {.column width="50%" .f4 .nt5}
+[Outcomes Analysis]{.f2 .b}
 
 ::: {.pl4 .mb4}
 - Detect test results that exceed thresholds
@@ -752,7 +742,7 @@ Combine monitoring and workflows for [performance-based governance]{.b} with [th
 - Document and track remediation activities
 :::
 
-[Data-Driven Governance]{.button-small .f5}
+[Data-Driven Governance]{.f2 .b}
 
 ::: {.pl4}
 Combine monitoring & workflows for:
@@ -796,7 +786,7 @@ Combine monitoring & workflows for:
 :::
 
 ::: {.column width="10%" .f2 .pt2 .tr}
-[6]{.f1 .ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .smallcaps}
+[6]{.f1 .ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .bw1 .smallcaps}
 :::
 
 ::: {.column width="70%" .f2 .pl3 .pr3 .pt2}
@@ -815,24 +805,26 @@ ValidMind provides [AI-powered risk insights]{.b} to enhance documentation quali
 
 :::: {.columns}
 
-::: {.column width="70%"}
+::: {.column width="50%"}
 
-::: {.nt4 .tc}
-![](../assets/overview-llm-features-check-document-in-progress.gif){width="50%" .lightbox .screenshot}
+::: {.nt5 .tc}
+![](../assets/overview-llm-features-check-document-in-progress.gif){width="50%" .lightbox .screenshot .tilt-right}
 :::
 
 :::
 
-::: {.column width="30%" .pt4}
+::: {.column width="50%" .nt4}
 
-::: {.pt2 .pl4 .pb4}
-[Document Checker]{.button-small .f4}
+::: {.pt2 .pl4 .pb4 .f3}
+[Document Checker]{.f2 .b}
 
-::: {.f3}
-- Assess whether required information is clearly documented
-- Identify missing or weak areas in the documentation
-- Offer guidance on how to improve clarity, completeness, and compliance
-- Align with regulatory expectations for risk and model governance 
+- Assesses whether required information is clearly documented
+- Identifies missing or weak areas in the documentation
+- Guides you on how to improve clarity, completeness, and compliance
+- Aligns with regulatory expectations for risk and model governance 
+
+::: {.f4 .pl3 .pt2}
+[SR 11-7]{.button-small .shadow-5-ns} [SS1/23]{.button-small .shadow-5-ns} [E-23]{.button-small .shadow-5-ns} [EU AI ACT]{.button-small .shadow-5-ns}
 :::
 
 :::
@@ -841,72 +833,11 @@ ValidMind provides [AI-powered risk insights]{.b} to enhance documentation quali
 
 ::::
 
-::: {.slideover--b .half .auto-collapse}
+::: {.slideover--b .auto-collapse .three-quarters}
 
-::: {.tc}
+::: {.tc .nt4}
 [[{{< fa circle-info >}}&ensp;How do I use the document checker?]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/guide/model-documentation/check-documentation-for-compliance.html)
 :::
-
-:::
-
-
-# [AI-powered features]{.hidden}{data-autoslide="18000"}
-
-:::: {.columns}
-
-::: {.column width="60%" .pr4}
-
-::: {.pl4 .mb4}
-[Test Interpretation]{.button-small .f4}
-
-::: {.f3}
-- Interprets results from tests run within ValidMind
-- Generates descriptions of tests and highlights key insights
-- Provides summaries with actionable takeaways
-:::
-:::
-
-::: {.pl4 .mb4}
-[Risk Assessment]{.button-small .f4}
-
-::: {.f3}
-- Generates tailored risk assessments using test results
-- Aids in identifying potential risks based on model performance
-- Provides foundation for better-informed decision-making
-:::
-:::
-
-:::
-
-::: {.column width="40%" .pl4}
-
-::: {.pl4 .mb4}
-[Qualitative Checks]{.button-small .f4}
-
-::: {.f3}
-- Leverages metadata from inventory and test outcomes
-- Creates qualitative sections within model documentation
-- Ensures contextual information is accurately documented
-:::
-:::
-
-:::
-
-::::
-
-::: {.slideover--b .three-quarters .auto-collapse}
-
-:::: columns
-
-::: {.column width="50%" .tc .nt4}
-[[{{< fa circle-info >}}&ensp;LLM features overview]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/about/overview-llm-features.html) 
-:::
-
-::: {.column width="50%" .tc .nt4}
-[[{{< fa scale-balanced >}}&ensp;AI usage policy]{.button .button-light-green .shadow-5-ns}](https://validmind.com/about/legal/ai-usage-policy/)
-:::
-
-::::
 
 :::
 
@@ -964,36 +895,7 @@ ValidMind provides predefined templates and workflows aligned with major regulat
 
 :::
 
-
 # [Next Steps]{.smallcaps .f1} {data-autoslide="60000"}
 
 
-:::: {.columns}
-
-::: {.column width="50%" .pr4}
-
-[Training by role]{.button-small .f4 .mb3}
-
-[[Administrator Fundamentals](https://docs.validmind.com/training/administrator-fundamentals/administrator-fundamentals-register.html)]{.button .shadow-5-ns .f4}
-
-[[Developer Fundamentals](https://docs.validmind.com/training/developer-fundamentals/developer-fundamentals-register.html)]{.button .shadow-5-ns .f4}
-
-[[Validator Fundamentals](https://docs.validmind.com/training/validator-fundamentals/validator-fundamentals-register.html)]{.button .shadow-5-ns .f4}
-
-:::
- 
-::: {.column width="50%" .pl3}
-
-[Training by use case]{.button-small .f4 .mb3}
-
-[[Quickstarts](https://docs.validmind.com/get-started/get-started.html)]{.button .shadow-5-ns .f4}
-
-[[Training](https://docs.validmind.com/training/training.qmd)]{.button .shadow-5-ns .f4}
-
-[[User Guides](https://docs.validmind.com/guide/guides.html)]{.button .shadow-5-ns .f4}
-
-[[Code Samples](https://docs.validmind.com/developer/samples-jupyter-notebooks.html)]{.button .shadow-5-ns .f4}
-
-:::
-
-::::
+[[Quickstarts](https://docs.validmind.com/get-started/get-started.html)]{.button .shadow-5-ns .f4}&emsp;[[Training](https://docs.validmind.com/training/training.qmd)]{.button .shadow-5-ns .f4}&emsp;[[User Guides](https://docs.validmind.com/guide/guides.html)]{.button .shadow-5-ns .f4}&emsp;[[Code Samples](https://docs.validmind.com/developer/samples-jupyter-notebooks.html)]{.button .shadow-5-ns .f4}
