--- a/site/training/what-is-validmind/what-is-validmind.qmd
+++ b/site/training/what-is-validmind/what-is-validmind.qmd
@@ -842,17 +842,17 @@ ValidMind provides [AI-powered risk insights]{.b} to enhance documentation quali
 :::
 
 
-# [Regulatory frameworks]{.hidden}{data-autoslide="15000"}
+# [How to put it all together]{.hidden}{data-autoslide="15000"}
 
 :::: {.columns}
 
 ::: {.column width="50%" .pr4}
 
 ::: {.pl4 .mb4}
-[Built-in Framework Support]{.button-small .f4}
+[How to put it all together]{.f2 .b}
 
 ::: {.f3}
-ValidMind provides predefined templates and workflows aligned with major regulatory frameworks:
+ValidMind provides implementation guides aligned with major regulatory frameworks:
 :::
 
 ::: {.f4 .pl3 .pt2}
@@ -895,7 +895,7 @@ ValidMind provides predefined templates and workflows aligned with major regulat
 
 :::
 
-# [Next Steps]{.smallcaps .f1} {data-autoslide="60000"}
+# [Need more?]{.smallcaps .f1} {data-autoslide="60000"}
 
 
 [[Quickstarts](https://docs.validmind.com/get-started/get-started.html)]{.button .shadow-5-ns .f4}&emsp;[[Training](https://docs.validmind.com/training/training.qmd)]{.button .shadow-5-ns .f4}&emsp;[[User Guides](https://docs.validmind.com/guide/guides.html)]{.button .shadow-5-ns .f4}&emsp;[[Code Samples](https://docs.validmind.com/developer/samples-jupyter-notebooks.html)]{.button .shadow-5-ns .f4}
