--- a/site/notebooks/EXECUTED/model_validation/1-set_up_validmind_for_validation.ipynb
+++ b/site/notebooks/EXECUTED/model_validation/1-set_up_validmind_for_validation.ipynb
@@ -488,6 +488,20 @@
     "\n",
     "Now that the ValidMind Library is connected to your model in the ValidMind Library with the correct template applied, we can go ahead and start the model validation process: **[2 — Start the model validation process](2-start_validation_process.ipynb)**"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47e90901",
+   "metadata": {},
+   "source": [
+    "<small>\n",
+    "\n",
+    "***\n",
+    "\n",
+    "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
+    "Refer to the [LICENSE file in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
+   ]
   }
  ],
  "metadata": {
