--- a/site/notebooks/how_to/customize_test_result_descriptions.ipynb
+++ b/site/notebooks/how_to/customize_test_result_descriptions.ipynb
@@ -999,6 +999,19 @@
     "\n",
     "Use `test_description` and `additional_context` parameters to anchor test results descriptions in your specific domain and business context, preventing the LLM from generating generic or inappropriate interpretations. Then use `instructions` to explicitly direct the LLM to ground its analysis in this provided context, such as \"Base all recommendations on the thresholds specified in the additional context section\" or \"Interpret all metrics according to the test description provided.\""
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<small>\n",
+    "\n",
+    "***\n",
+    "\n",
+    "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
+    "Refer to the [LICENSE file in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
+   ]
   }
  ],
  "metadata": {
