--- a/site/notebooks/how_to/document_multiple_results_for_the_same_test.ipynb
+++ b/site/notebooks/how_to/document_multiple_results_for_the_same_test.ipynb
@@ -580,6 +580,19 @@
    "source": [
     "You may need to restart your kernel after running the upgrade package for changes to be applied."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<small>\n",
+    "\n",
+    "***\n",
+    "\n",
+    "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
+    "Refer to the [LICENSE file in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
+   ]
   }
  ],
  "metadata": {
