--- a/site/notebooks/code_samples/capital_markets/quickstart_option_pricing_models_quantlib.ipynb
+++ b/site/notebooks/code_samples/capital_markets/quickstart_option_pricing_models_quantlib.ipynb
@@ -1288,6 +1288,20 @@
     "\n",
     "Or, visit our [documentation](https://docs.validmind.ai/) to learn more about ValidMind."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cab6911c",
+   "metadata": {},
+   "source": [
+    "<small>\n",
+    "\n",
+    "***\n",
+    "\n",
+    "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
+    "Refer to the [LICENSE file in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
+   ]
   }
  ],
  "metadata": {
