--- a/site/notebooks/code_samples/code_explainer/quickstart_code_explainer_demo.ipynb
+++ b/site/notebooks/code_samples/code_explainer/quickstart_code_explainer_demo.ipynb
@@ -820,6 +820,19 @@
     "    content_id=\"issues_and_improvements_log\"\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<small>\n",
+    "\n",
+    "***\n",
+    "\n",
+    "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
+    "Refer to the [LICENSE file in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
+   ]
   }
  ],
  "metadata": {
