--- a/site/notebooks/how_to/explore_tests.ipynb
+++ b/site/notebooks/how_to/explore_tests.ipynb
@@ -4384,6 +4384,19 @@
         "\n",
         "Or, visit our [documentation](https://docs.validmind.ai/) to learn more about ValidMind.\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<small>\n",
+        "\n",
+        "***\n",
+        "\n",
+        "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
+        "Refer to the [LICENSE file in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+        "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
+      ]
     }
   ],
   "metadata": {
