--- a/site/notebooks/how_to/filter_input_columns.ipynb
+++ b/site/notebooks/how_to/filter_input_columns.ipynb
@@ -61,6 +61,19 @@
     "\n",
     "# notice that only the column \"col1\" is shown in the test result"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<small>\n",
+    "\n",
+    "***\n",
+    "\n",
+    "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
+    "Refer to the [LICENSE file in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
+   ]
   }
  ],
  "metadata": {
