--- a/site/notebooks/tutorials/model_development/4-finalize_testing_documentation.ipynb
+++ b/site/notebooks/tutorials/model_development/4-finalize_testing_documentation.ipynb
@@ -964,6 +964,19 @@
     "- [Code samples](https://github.com/validmind/validmind-library/tree/main/notebooks/code_samples)\n",
     "- [How-to guides](https://github.com/validmind/validmind-library/tree/main/notebooks/how_to)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<small>\n",
+    "\n",
+    "***\n",
+    "\n",
+    "Copyright © 2023-2026 ValidMind Inc. All rights reserved.<br>\n",
+    "Refer to the [LICENSE file in the root of the GitHub `validmind-library` repository](https://github.com/validmind/validmind-library/blob/main/LICENSE) for details.<br>\n",
+    "SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial</small>"
+   ]
   }
  ],
  "metadata": {
