Background image test

--- a/site/training/what-is-validmind/what-is-validmind.qmd
+++ b/site/training/what-is-validmind/what-is-validmind.qmd
@@ -30,7 +30,7 @@ title-slide-attributes:
 skip_preview: true
 ---
 
-# [How do I use ...?]{.hidden}{data-autoslide="60000"}
+# [Contents]{.hidden}{data-autoslide="60000" background-image="circle.svg"}
 
 :::: {.columns}
 
@@ -879,21 +879,7 @@ ValidMind provides implementation guides aligned with major regulatory framework
 
 ::::
 
-::: {.slideover--b .three-quarters .auto-collapse}
 
-:::: columns
-
-::: {.column width="50%" .tc .nt4}
-[[{{< fa circle-info >}}&ensp;AI governance guide]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/about/use-cases/ai-governance.html) 
-:::
-
-::: {.column width="50%" .tc .nt4}
-[[{{< fa book >}}&ensp;EU AI Act implementation]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/about/use-cases/eu-ai-act.html)
-:::
-
-::::
-
-:::
 
 # [Need more?]{.smallcaps .f1} {data-autoslide="60000"}
 
