--- a/site/training/what-is-validmind/what-is-validmind.qmd
+++ b/site/training/what-is-validmind/what-is-validmind.qmd
@@ -18,7 +18,7 @@ format:
     preview-links: auto
     view-distance: 2
     logo: /favicon.svg
-    footer: "{{< var validmind.training >}} | [Home {{< fa person-walking-dashed-line-arrow-right >}}](/training/training.qmd)"
+    footer: "{{< var validmind.training >}} | [ {{< fa bars >}}](#contents) | [Home {{< fa person-walking-dashed-line-arrow-right >}}](/training/training.qmd)"
     revealjs-plugins:
       - slideover
   html:
@@ -376,7 +376,7 @@ Track all activities for:
 
 ::::
 
-::: {.slideover--b .three-quarters .auto-collapse}
+::: {.slideover--b .auto-collapse}
 
 :::: columns
 
@@ -842,36 +842,42 @@ ValidMind provides [AI-powered risk insights]{.b} to enhance documentation quali
 :::
 
 
-# [How to put it all together]{.hidden}{data-autoslide="15000"}
+# [How to put it all together]{.hidden}{data-autoslide="15000" background-image="circle-arrow.svg"}
 
 :::: {.columns}
 
-::: {.column width="50%" .pr4}
+::: {.column width="50%" .pl3 .pr3}
 
 ::: {.pl4 .mb4}
 [How to put it all together]{.f2 .b}
 
 ::: {.f3}
-ValidMind provides implementation guides aligned with major regulatory frameworks:
+ValidMind provides implementation guides for:
 :::
 
 ::: {.f4 .pl3 .pt2}
-[SR 11-7]{.button-small .shadow-5-ns} [SS1/23]{.button-small .shadow-5-ns} [E-23]{.button-small .shadow-5-ns} [EU AI ACT]{.button-small .shadow-5-ns}
+[[AI governance<br>[EU AI Act]{.button-small .shadow-5-ns .f6 .tr}](/about/use-cases/ai-governance.qmd)]{.button .shadow-5-ns .f4}
+
+[[Model risk management<br>[SR 11-7]{.button-small .shadow-5-ns .f6 .tr} [SS1/23]{.button-small .shadow-5-ns .f6 .tr} [E-23]{.button-small .shadow-5-ns .f6 .tr}](/about/use-cases/model-risk-management.qmd)]{.button .shadow-5-ns .f4}
+
 :::
 :::
 
 :::
 
-::: {.column width="50%" .pl4}
+::: {.column width="50%" .pl3 .pr3}
 
 ::: {.pl4 .mb4}
-[Compliance Features]{.button-small .f4}
+[What these guides cover]{.f2 .b}
 
-::: {.f3}
-- Predefined workflows for regulatory compliance
-- Templates aligned with framework requirements
-- Document checker for compliance validation
-- Audit trails for regulatory evidence
+::: {.f4}
+- Inventory setup, custom fields, risk classification
+- Documentation templates aligned to frameworks
+- Automated testing for data quality and accuracy
+- Independent validation, effective challenge, remediation
+- Ongoing monitoring and drift detection
+- Governance roles and approval workflows
+- Audit trails for compliance evidence
 :::
 :::
 
