--- a/site/training/what-is-validmind/what-is-validmind.qmd
+++ b/site/training/what-is-validmind/what-is-validmind.qmd
@@ -18,7 +18,7 @@ format:
     preview-links: auto
     view-distance: 2
     logo: /favicon.svg
-    footer: "{{< var validmind.training >}} | [ {{< fa bars >}}](#contents) | [Home {{< fa person-walking-dashed-line-arrow-right >}}](/training/training.qmd)"
+    footer: "[{{< fa person-walking-arrow-loop-left >}} Contents](#contents) | {{< var validmind.training >}}  [{{< fa person-walking-dashed-line-arrow-right >}}](/training/training.qmd)"
     revealjs-plugins:
       - slideover
   html:
