Add pause button

--- a/site/training/what-is-validmind/what-is-validmind.qmd
+++ b/site/training/what-is-validmind/what-is-validmind.qmd
@@ -12,6 +12,7 @@ format:
     help: true
     controls-back-arrows: visible
     transition: zoom
+    auto-slide: 5000
     theme: [../assets/slides.scss, ../assets/use-cases.scss]
     slide-number: true
     chalkboard: false
